# open-vds

./: .dockerignore  .gitignore  .gitlab-ci.yml  Attributions.md  CMakeLists.txt  CMakeSettings.json  README.md  VSCodeAnalysis.ruleset  build-environment.Dockerfile  build_osdu_image.py  cppclasstemplate.txt  make_cppclass.bat  make_cppclass.py  setup.py
docs/: CMakeLists.txt  apidoc.py  conf.py  conf.py.in  connection.rst  cpp-api.rst  getting-started.rst  index.rst  python-api.rst  segyexport_readme.rst  segyimport_readme.rst  vdsinfo_readme.rst
docs/cppdoc/: cpp-api.rst  cpp-important-types-and-functions.rst
docs/tools/: segyexport_readme.rst  segyimport_readme.rst  tools.rst  vdsinfo_readme.rst
examples/: CMakeLists.txt  README.md
examples/GettingStarted/: CMakeLists.txt  main.cpp
examples/JupyterNotebook/: OpenVDS_basic_usage.ipynb  OpenVDS_slice_viwer.ipynb  requirements.txt
examples/NpzToVds/: npz_to_vds.py
examples/SliceDump/: CMakeLists.txt  GenerateVDS.h  main.cpp
examples/SliceServer/: requirements.txt  sliceserver.py
java/: CMakeLists.txt  README.md
java/cpp/: OpenVdsJni.pro
python/: CMakeLists.txt  aws_defs.txt  core.vcxproj.user.txt  requirements-dev-with-docs.txt  requirements-dev.txt  setup.py
python/openvds/: CMakeLists.txt  PyGlobal.cpp  PyGlobal.h  PyGlobalMetadataCommon.cpp  PyGlobalMetadataCommon.h  PyGlobalState.cpp  PyGlobalState.h  PyKnownMetadata.cpp  PyKnownMetadata.h  PyMetadata.cpp  PyMetadata.h  PyMetadataAccess.cpp  PyMetadataAccess.h  PyMetadataContainer.cpp  PyMetadataContainer.h  PyMetadataKey.cpp  PyMetadataKey.h  PyRange.cpp  PyRange.h  PyVector.cpp  PyVector.h  PyVolumeData.cpp  PyVolumeData.h  PyVolumeDataAccess.cpp  PyVolumeDataAccess.h  PyVolumeDataAccessManager.cpp  PyVolumeDataAccessManager.h  PyVolumeDataAxisDescriptor.cpp  PyVolumeDataAxisDescriptor.h  PyVolumeDataChannelDescriptor.cpp  PyVolumeDataChannelDescriptor.h  PyVolumeDataLayout.cpp  PyVolumeDataLayout.h  PyVolumeDataLayoutDescriptor.cpp  PyVolumeDataLayoutDescriptor.h  PyVolumeDataPageAccessor.cpp  PyVolumeDataPageAccessor.h  PyVolumeSampler.cpp  PyVolumeSampler.h  SharedLibrary.cpp  (+11 more)
python/tools/: inspect_header.py  makedocstrings.bat  makereport.py  makewrapper.bat  merge_generated.py  mkdoc.py  mkwrapper.py  preprocess_header.py
python/util/: classtemplate.txt  make_class.bat  make_class.py
src/: CMakeLists.txt  DimensionGroup.cpp  File.cpp  File.h  File_Win.cpp  Linux_File.cpp  OpenVDS.cpp  OpenVDSHandle.h  S3_Downloader.cpp  S3_Downloader.h  VolumeData.h  VolumeDataChannelMapping.h  VolumeDataPartition.h  Win_File.cpp  open-vds.cpp
src/IO/: AWSCredentialsHandler.cpp  AWSCredentialsHandler.h  File.cpp  File.h  IOManager.cpp  IOManager.h  IOManagerAWS.cpp  IOManagerAWS.h  IOManagerAzure.cpp  IOManagerAzure.h  IOManagerCurl.cpp  IOManagerCurl.h  IOManagerCurlAWS.cpp  IOManagerCurlAWS.h  IOManagerCurlAzure.cpp  IOManagerCurlAzure.h  IOManagerInMemory.cpp  IOManagerInMemory.h  Linux_File.cpp  RequestSigner.cpp  RequestSigner.h  S3_Downloader.cpp  S3_Downloader.h  Win_File.cpp
src/Math/: Range.h  Vector.h
src/OpenVDS/: CMakeLists.txt  KnownMetadata.h  Metadata.h  OpenVDS.cpp  OpenVDS.h  SimplexNoiseKernel.h  Vector.h  VolumeData.h  VolumeDataAccess.h  VolumeDataAxisDescriptor.h  VolumeDataChannelDescriptor.h  VolumeDataChannelMapping.h  VolumeDataLayout.h  VolumeDataLayoutDescriptor.h  VolumeIndexer.h  VolumeSampler.h
src/SEG-Y/: CMakeLists.txt  DataProvider.h  SEGY.cpp  SEGY.h  SEGYExport.cpp  SEGYFile.cpp  SEGYFile.h  SEGYFileInfo.cpp  SEGYFileInfo.h  SEGYImport.cpp  SEGYScan.cpp  SEGYUpload.cpp
src/SEGYUtils/: CMakeLists.txt  SEGY.cpp  SEGYFileInfo.cpp
src/VDS/: Base64.cpp  Base64.h  Bitmask.h  DataBlock.cpp  DataBlock.h  DimensionGroup.cpp  DimensionGroup.h  Env.cpp  Hash.h  IntrusiveList.h  MetaDataManager.cpp  MetaDataManager.h  MetadataManager.cpp  MetadataManager.h  ParseVDSJson.cpp  ParseVDSJson.h  Rle.cpp  Rle.h  SimplexNoiceKernel.h  SimplexNoiseKernel.h  ThreadPool.h  VDS.h  ValueConversion.h  VolumeData.h  VolumeDataAccess.h  VolumeDataAccessManagerImpl.cpp  VolumeDataAccessManagerImpl.h  VolumeDataAccessor.cpp  VolumeDataAccessor.h  VolumeDataAccessorRequest.cpp  VolumeDataAxisDescriptor.h  VolumeDataChannelDescriptor.h  VolumeDataChannelMapping.cpp  VolumeDataChannelMapping.h  VolumeDataChunk.h  VolumeDataHash.cpp  VolumeDataHash.h  VolumeDataHashImpl.h  VolumeDataLayer.cpp  VolumeDataLayer.h  (+24 more)
src/open-vds/: open-vds.h
tests/: CMakeLists.txt  RootTestExecutable.cpp  RunRoundtrip.cmake
tests/OpenVDS/: DataAccess.cpp  DataAccessorClone.cpp  GlobalStateTest.cpp  MultiThreadedRequests.cpp  OpenVDSIntegrationTest.cpp  RequestCancellation.cpp  RequestVolumeError.cpp  RequestVolumeSamples.cpp  RequestVolumeSubsetAndPageAccessor.cpp  RequestVolumeSubsetFormat.cpp  RequestVolumeTraces.cpp  VolumeIndexerSymbols.cpp  WaitForCompletion.cpp
tests/SEG-Y/: SEGYScanTest.cpp
tests/VDS/: DeserializeVolumeDataTest.cpp  LayerStatus.json  ParseConnectionStringTest.cpp  ParseVDSJsonTest.cpp  RequestVolumeCleanupThread.cpp  VDSIntegrationTest.cpp  VolumeDataLayout.json  chunk.1082.CompressionMethod_None  chunk.1082.CompressionMethod_WaveletLossless  chunk.1255.CompressionMethod_None  chunk.1255.CompressionMethod_WaveletLossless  chunk.CompressionMethod_None  chunk.CompressionMethod_RLE  chunk.CompressionMethod_Wavelet  chunk.CompressionMethod_WaveletLossless  chunk.CompressionMethod_Zip  chunk.U16.CompressionMethod_None  chunk.U16.CompressionMethod_Wavelet  chunk.U16.CompressionMethod_WaveletLossless  chunk.U8.CompressionMethod_None  chunk.U8.CompressionMethod_Wavelet  chunk.U8.CompressionMethod_WaveletLossless
tests/fmt/: basic_fmt.cpp
tests/io/: AzureIo.cpp  CreateSyntheticVDS.cpp  IOErrorHandling.cpp  InMemoryIo.cpp  IoErrorHandling.cpp  IoManagerBasic.cpp  IoManagerProtocol.cpp  IoPerformance.cpp  IoVDSRoundtrip.cpp  azureio.cpp  filetest.cpp  s3test.cpp
tests/java/: CMakeLists.txt
tests/jsoncpp/: jsoncpp_parse.cpp  jsoncpp_serialize.cpp
tests/python/: .aws_defs.txt.swp  CMakeLists.txt  aws_defs.txt  (+5 more)
tools/: CMakeLists.txt
(+257 files in other folders)
