project(OpenVDSExamples)
if (CMAKE_PROJECT_NAME STREQUAL "OpenVDSExamples")
  include(modules/InstalledPaths.cmake)
  include(modules/SetWarnings.cmake)
  include(modules/CopyDllForTarget.cmake)
  project(getting-started)
  set(openvds_DIR "${INSTALLED_LIB_RELATIVE_TO_EXAMPLES}/cmake/openvds")
  find_package(openvds REQUIRED)
  find_package(Threads REQUIRED)
  find_package(OpenMP)
endif()
add_subdirectory(SliceDump)
add_subdirectory(GettingStarted)
